Proyecto #2 finalizado: se agrego modal para ver los productos agregados al cart y la posibilidad de eliminarlos del cart

--- a/fake-store/style.css
+++ b/fake-store/style.css
@@ -121,13 +121,9 @@ body {
     opacity: 1;
 }
 
-.product-info {
-    padding: 1.2rem;
-}
+.product-info {padding: 1.2rem;}
 
-.product-info >p{
-    text-align: center;
-}
+.product-info > p {text-align: center;}
 
 .product-title {
     font-size: 1.1rem;
